Added chrome storage visualized

--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,7 @@
         <button id="unit_button" class="green_button">Units</button>
         <button id="instructions_button" class="green_button">Instructions</button>
         <button id="evaluator_button" class="green_button">Evaluate maps</button>
+        <button id="key_check_button" class="green_button">Key check</button>
     </div>
 </body>
 
