Quick preset options

--- a/html/units.html
+++ b/html/units.html
@@ -15,7 +15,7 @@
 
     <!-- Quick set popup -->
     <div class="popup" id="popup">
-        <h1>NOT IMPLEMENTED YET - Quick unit preset based on unit type</h1>
+        <h1>Quick unit preset based on unit type</h1>
         <h1><b>Save Preset</b> will save the presets to a file, it will not set the priotiries to the units. Make sure
             to click <b>Set</b> to do it.</h1>
         <b>
@@ -32,6 +32,17 @@
         </div>
         <button id="savePreSetBtn" class="green_button">Save Preset (Fill the numbers below, then click Save
             Preset)</button>
+        <br>
+        <h4>Save presets on the chrome memory for quicker setting</h4>
+        <button id="savePreset1Btn" class="green_button quick_save_btn" >Save 1</button>
+        <button id="savePreset2Btn" class="green_button quick_save_btn">Save 2</button>
+        <button id="savePreset3Btn" class="green_button quick_save_btn">Save 3</button>
+        <button id="savePreset4Btn" class="green_button quick_save_btn">Save 4</button>
+        <button id="loadPreset1Btn" class="green_button quick_save_btn">Load 1</button>
+        <button id="loadPreset2Btn" class="green_button quick_save_btn">Load 2</button>
+        <button id="loadPreset3Btn" class="green_button quick_save_btn">Load 3</button>
+        <button id="loadPreset4Btn" class="green_button quick_save_btn">Load 4</button>
+        <button id="clearPresetBtn" class="green_button quick_save_btn">Clear</button>
         <!-- Table with units and input fields -->
         <table>
             <tr>
