--- a/html/units.html
+++ b/html/units.html
@@ -16,8 +16,8 @@
     <!-- Quick set popup -->
     <div class="popup" id="popup">
         <h1>Quick unit preset based on unit type</h1>
-        <h1><b>Save Preset</b> will save the presets to a file, it will not set the priotiries to the units. Make sure
-            to click <b>Set</b> to do it.</h1>
+        <h1>"Save Preset" will save the presets to a file, it will not set the priorities to the units. Make sure
+            to click "Set" to do it.</h1>
         <b>
             <p>Load the units from the server before using this menu, otherwise there will be no units to preset.</p>
             <p>Make sure to save after closing this popup so your prerefences are set.</p>
