--- a/html/units.html
+++ b/html/units.html
@@ -42,7 +42,7 @@
         <button id="loadPreset2Btn" class="green_button quick_save_btn">Load 2</button>
         <button id="loadPreset3Btn" class="green_button quick_save_btn">Load 3</button>
         <button id="loadPreset4Btn" class="green_button quick_save_btn">Load 4</button>
-        <button id="clearPresetBtn" class="green_button quick_save_btn">Clear</button>
+        <button id="clearPresetBtn" class="green_button quick_save_btn">Clear inputs (it will not delete your presets from memory)</button>
         <!-- Table with units and input fields -->
         <table>
             <tr>
