Patch for mislabeled unit names

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="button_container">
-        <button id="iframe_button" class="green_button">Open settings</button>
+        <button id="settings_button" class="green_button">Open settings</button>
         <button id="whitelist_button" class="green_button">Filter lists</button>
         <button id="log_button" class="green_button">Log</button>
         <button id="unit_button" class="green_button">Units</button>
