--- a/settings.html
+++ b/settings.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="iframe.js"></script>
-    <link rel="stylesheet" type="text/css" href="/styles/iframe_styles.css">
+    <script src="settings.js"></script>
+    <link rel="stylesheet" type="text/css" href="/styles/settings_styles.css">
 </head>
 <main class="main"></main>
 
