Typos and formatting json

--- a/html/check_keys.html
+++ b/html/check_keys.html
@@ -11,10 +11,10 @@
 
 <body>
     <h1>This page is used for debugging purposes</h1>
-    <p>Enter a key to check:</p>
+    <h4>Enter a key to check:</h4>
     <input type="text" id="key_input">
     <button id="check_button">Check Key</button>
-    <div id="data_container"></div>
+    <pre id="data_container"></pre>
 </body>
 
 </html>
