--- a/html/units.html
+++ b/html/units.html
@@ -47,7 +47,7 @@
         <!-- Table with units and input fields -->
         <table>
             <tr>
-                <td>Mame</td>
+                <td>Name</td>
                 <td>Level 0 to 5</td>
                 <td>Level 6 to 10</td>
                 <td>Level 11 to 20</td>
