added Place Anyway functionality

--- a/settings.html
+++ b/settings.html
@@ -28,13 +28,13 @@
                 </td>
             </tr>
             <tr>
-                <td><label for="minUnitLvlDungInput">Minimum unit level for dungeons&nbsp;&nbsp;&nbsp;<input
-                            type="number" id="minUnitLvlDungInput"></label></td>
+                <td><label for="maxUnitLvlDungInput">Maximum unit level for dungeons&nbsp;&nbsp;&nbsp;<input
+                            type="number" id="maxUnitLvlDungInput"></label></td>
                 <td><button id="minUnitLvlButton"
                         style="width: fit-content; height: fit-content; text-align: center; background-color: #5fa695;">Set</button>
                 </td>
-                <td><label for="minDungeonLvlInput">Minimum dungeon level for custom unit level
-                        &nbsp;&nbsp;&nbsp;<input type="number" id="minDungeonLvlInput"></label></td>
+                <td><label for="maxDungeonLvlInput">Maximum dungeon level for custom unit level
+                        &nbsp;&nbsp;&nbsp;<input type="number" id="maxDungeonLvlInput"></label></td>
                 <td><button id="minDungeonLvlButton"
                         style="width: fit-content; height: fit-content; text-align: center; background-color: #5fa695;">Set</button>
                 </td>
@@ -93,8 +93,8 @@
                 </td>
             </tr>
             <tr>
-                <td><label for="dungeonLevelSwitch"><input type="checkbox" id="dungeonLevelSwitch"> Place units (or any
-                        flag bearer) with a minimum custom level on dungeons</label></td>
+                <td><label for="dungeonLevelSwitch"><input type="checkbox" id="dungeonLevelSwitch"> Place units with a maximum custom level on dungeons</label></td>
+                <td><label for="dungeonPlaceAnywaySwitch"><input type="checkbox" id="dungeonPlaceAnywaySwitch"> Allow Place Anyway on flag markers in Dungeons (must turn on custom level on dungeons) - BE CAREFUL - Place Anyway can get you banned</label></td>
             </tr>
             <tr>
                 <td><label for="liveMasterSwitch"><input type="checkbox" id="liveMasterSwitch"> Force live switch to
