Added a key remover

--- a/html/check_keys.html
+++ b/html/check_keys.html
@@ -13,7 +13,8 @@
     <h1>This page is used for debugging purposes</h1>
     <h4>Enter a key to check:</h4>
     <input type="text" id="key_input">
-    <button id="check_button">Check Key</button>
+    <button id="check_button" style="margin-right: 300px;">Check Key</button>
+    <button id="delete_button">Delete Key</button>
     <pre id="data_container"></pre>
 </body>
 
